--- a/ansible/inventory/kube/host_vars/k3s-0.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-0.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:HcmqBc0V,iv:gACMnJTDjTAyCb5tMPwLYS3ZuG1LBFq4xglD9kl8+0A=,tag:vwsHEc6QhRy0eBuJmrcxhg==,type:str]
-ansible_user: ENC[AES256_GCM,data:69A1Kuc8,iv:fS5x6l1s+ikElNwt28QeTJHj8nWkP555jqsQAiaptS0=,tag:JJ0ZdHeR5+PYCwrAfkma+Q==,type:str]
+kind: ENC[AES256_GCM,data:NQuwyOfL,iv:JXKvb0IN+qbGa2zgktX9OLIIWyPD7eRM/VIRYnHMfqY=,tag:lFRXvlg5GHKi30dTRut1aQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:V7ofWiML,iv:6sJrfVIy+xfhLmyH8ncIA3Gr0DaM1DT0CAYHqOVOPdo=,tag:lE90gwOExWlLb83ZGOJCuA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZSHEvL3lYdzhpUExzY29y
-            OGdad2NyYndYTnVoUkd0WmJaaHB1eUVlU0V3Cms1TzNzdEV1RFF3MTJTN3RFVWNi
-            MzVvN0dJT0lBbWEza3o4UWc3bHNYb2sKLS0tIDlWSDBJVlIxcUIvQ0RXQksvTGVz
-            eTRNTzhpYmlmdU9JaWhBdTBxUEt0QzAKPvdaz5ZFudKJ6F9QB6PU3JKhm0nEkd5L
-            ynvGPbg67gjtcuwQtOPTT2z+cmZIh+MTCDAfDY5G5WVb0tQCRWRKcA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBuWTZxeGVKWGxoamIzZVZX
+            aDA2NFUzeXJrcDdZS1pFMFVHQlRSVHFtSTFVCjRmd1RGOUl1SnhCRk5OTTI5MjNN
+            NkJKM3B6cWR1VTRGR0g5MTJKOFo0SzQKLS0tICtZUnE1YUpzNWxET1BNVk9XR1Nt
+            cEM4TklDcU5yU2xGWS9STXBPWkQwbzAK9RPuZi/c+Cm9fyxldz4JiLBMj6dk2noJ
+            YCIWDRLWR8cYNnOgc+aE6LQZMnz/jhe1y4TYkbtIZ8qHM0A+zJ8/QQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:oHqXo95Gjn2syQrVmJMUszKnh25NLrrusLE5QyCi4MJi6ry50NLhUKzzPbaX21KWKLZyfs0+P4qZ4Qj3uJBrgicjyI1VrylhuS2dHNvm8hxsSK8uu7M4gyaoPCvFClidao76DAiMJaoNcYbmGvAjgHpndw6BJl0R6YX81WITKG0=,iv:rfvl/8tHyvSB3MMTuDaG2eFRX4EqqZSrDDEAjdfzSRM=,tag:WtgGRSbsgecFcqNnEc88HA==,type:str]
+    lastmodified: "2023-01-05T23:23:29Z"
+    mac: ENC[AES256_GCM,data:TNVN4RqB7xh21zagB9K2yFr4NqFvE//Zn+TBG7VuZil0RVDcurDae89F/IM0s0AWHhNxzUrsJ+eVfX4TcmBNRU+M1ZGf8WsQxLkd/DjwM+XMKDBh40LndP5+qh7XbWoI8JM7ak7tJl4Rl+rIaOxpWti4juN+ijsPYwiMdTB+XYI=,iv:bDCWpCfmurPWn8kpjvHyLIsorR0CjgCkA704Tqic8Es=,tag:cZHdUQFpTvtu8/sFpmCAGg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
