--- a/ansible/inventory/kube/host_vars/k3s-1.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-1.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:g+bSBOtb,iv:3HB316niw018PVeOHSER0ev0HM+q73mSbFJ6c0jgfZ4=,tag:bcQtPvinPrVVwHJBSEe/bw==,type:str]
-ansible_user: ENC[AES256_GCM,data:XK7HO250,iv:X2/Qo0vUq7EpVfmIwKDtzL8UpwMwgv8Rgmy29RCFEmw=,tag:ny8JgACPpW13rpPYwNoMdQ==,type:str]
+kind: ENC[AES256_GCM,data:EE51X3TH,iv:iXgVkqV3aYqM0hFWsyWLAiqD/B1gghX7x4BmmanXcUQ=,tag:tlvAwPCL/znUPZNAbbxWAw==,type:str]
+ansible_user: ENC[AES256_GCM,data:oGwCUptU,iv:IiZJNVafoSjTguKc9pBDlqQqZ2A6lJq6U/K34RzzSxA=,tag:KxF20h7Duvgx6/drXPrDHQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaNEVJM1lwY2JCZTZJeFBG
-            Tk5OQzFmNkJvWjhGd2JwTVlNZVRjelp0QXpvCnkwd0p6bE1NVzUyTmcrM2U1ZldJ
-            Q1BWM3BwekU1Nk95Y1E1VFpNVGJFVDAKLS0tIDRzQVRFdThKNDdYQ1BIdGZNc3dE
-            bVZnT01JT1lEMVdQdW5UU1BiekV0L2cKbebbPHuOOJlvii5GF5jnVxChcydd/bpl
-            V/yEphvAN4Lc2eGSzyQE9XhM/BJvf3CzFccEGU/JsrDb1p/mXYG1Ow==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1cDFlZ1NWbmVnYVVtZjdl
+            UituTkhzbHF3NGd3TldzNVpCb3B6YlRCTlJNCnZub2tVWEkvTW1aZElFdHRPemQw
+            Ulc3OUpqTGprdk5EUDNwd0FQTERMVHMKLS0tIG9TeXFKelc4ZnJqSHYxT01TVUNY
+            S3RrZElJc210aEQ0TTFtdExTYStXNncKJeWjWOlEs2S2/5zVZUoW3xIfl1DLEGDl
+            8ZDVA8RXozhAzExpn1lgKZXrhP/11rakuCtg6bynUpchYIiB6Omiiw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:ss9ppxspEOuXWQnRDSh3Wb6Z+Fy9AKYZGrwjVfCzgj/9n6y0LNSQCc2tF/LHrpvks48VWOpkRBLWEy8ymq8qVTW6voM4uBoS/G+MOCCIMZyZ+V9eDPzV1e83nCYLp0L8Ummbl5Riwnbhae+sQtI/l8IvGxLIoSdqA+0Nlz0FIYk=,iv:tk3KwzNmkZat0eAQKKDTdjYPp8e7xjBaMqOzXBRKszc=,tag:4VSJwBy4bKD4DGE9c/s8lg==,type:str]
+    lastmodified: "2023-01-05T23:23:29Z"
+    mac: ENC[AES256_GCM,data:hxIxBTI4vR2uRdW4lAu9SU3ZGr0+rnywkg81S3eQS07f3cFckwv6D7nnm2UL0JrBGYSpiU1sNuqaRZT8of5gc00H85vnFbt4F4zNlHdetmwKPbFDS7LjonX+fMDboZSCDKevoLectS0cjMOeQJs9TtIwrX9o1gQiXHnahflHbhQ=,iv:7nEmK4Eqhu8+FFdfv/xTcX8vSFwDwDjfBZffBl+ZkEo=,tag:9MW+5j8ch4vb6wPOPoJuRg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
