--- a/ansible/inventory/kube/host_vars/k3s-2.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-2.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:EuYVew2J,iv:evx/unxvn/Ds3d/5b/EUCwZc++8ycLEoCCwDY4NEXl4=,tag:AKEH+YWVVxQDMoaKWymssA==,type:str]
-ansible_user: ENC[AES256_GCM,data:uXmR8ZoX,iv:qN6d1+0vJyGRuPqRuVNPS0g9ujhKgWb7XF3ftcCFssc=,tag:nDKSSp4OvpqSkEETcTyz9g==,type:str]
+kind: ENC[AES256_GCM,data:mbqMIQws,iv:FTuQin1KH6NyFmvqUA/0ChZbgiM5tsXZUJoltriZmVc=,tag:cLUfqigRV0Zum6dsC9HVIQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:B/9ux/qk,iv:jkUloVVHxxVHCk85BA5xgm1Ybe/ZUE7FPDap72fGKs4=,tag:+HCe4359LoMuvFJ52wbghA==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3N0JodThSWm5pNGFPejdX
-            aUhkS0s1U1pRY2tUZ2RXNFBXU00wanhLczI4Cmp5UnlVb1ZCaG5WNkJaaWl0eFR0
-            UlA3SndBdExiZGt0UjBLZ2M2Z1kxOFkKLS0tIDhLQW1CRG9ZOUUyWUg4M2k1QjNt
-            NmJONzhuMkZ6Wll3V3JnRzNLUG5FOVkKB/Lxosa9sUZ6nMGYJC0H5x4WSZdwVORq
-            xjrPakXu9FuKPU/67fwbcnPpczXODCgrfmvPgzr+GvusGP6VpEBfWw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnQXA5T3VOd0crQnV2bzBa
+            L3pZMHlpOHZiWUNHNTFsdUt5VjZiamhYYkVrClJEMVpIeXdoS0JvSkc1YW1hNm9O
+            UGVDdDE5YTNZTjh2QjlndXhmOE9RWkkKLS0tIFA2NmFDdzRycVZ4WGxkN3VmM0Uz
+            NEVHanRSQnlwWHNDYUFFZ1lNQ2ZqYkkKwKtAL6HWp2q7Rgpvhfel7tT+bZF17jXQ
+            Wx9HqKf4cyHBjNVLvC/Gw5s+z5xtH7T6cNXmWlOi5E/1BJwjBl/evQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:MPSyM68Bqsep1yPgYCAmGLnzEZuUuYZ9UoF6UMOPgcuVEzFR/jw8FmAo+rG9JJTD4aBETS0uavedMkcsVHT67Q/mGnxi0Fe08Q7Qii9PVwSn0M9IKoD0hGZnS8D2VDxeRI+V5qiXOfn72yPjRQyNquZHFKAXVR9C5PCpEt7CfZQ=,iv:6Bci6syuYWfKPNozGt5sDwj82s0dCS/KtxQ4/qTcGpk=,tag:ZNmOriKV2UttWi/rXhA6sA==,type:str]
+    lastmodified: "2023-01-05T23:23:29Z"
+    mac: ENC[AES256_GCM,data:APVKPdeM6UdD0rqRIIIRyLYaxGDMu6WDLueWWRJj7lHOUz2frUiwPNIkhzR1PEnYUqQ8ugUQvt/dhjB/zgqBaGDplmjtlBc+Dz20TGN4r7vav3UtPU1jTljQ+YFJ03QB2pdK+iVeeQBW5ESA3YgrGDW14L6QahTqabz0YZK5NGQ=,iv:e4pv2EJItyMxVg6YDN/6tiHTcblV0k5XKX3Li1xzj8Y=,tag:6r4IeAC3fC8xi5obR3P2pQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
