--- a/ansible/inventory/kube/host_vars/k3s-3.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-3.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:wUiAZQKI,iv:lH9CLdM2g8WmlXnIouKIG2adCe/ihHe5d2Zhd8dtg38=,tag:bWN9xkTym7iPbgN/tSQysQ==,type:str]
-ansible_user: ENC[AES256_GCM,data:Iu58nbYp,iv:rEDKQqaSsaaMPoZpYLXyMHF5dqK/XsV28tFT0/zifQQ=,tag:v1DzsI9jpQI4yVXgY5xocg==,type:str]
+kind: ENC[AES256_GCM,data:CCqJKurc,iv:GIc97TZk1t61Mkgg/u9gOF7aj20AxhZYHV3LCIdFbXU=,tag:RWR7jg0hb28SW0bMY3Gsng==,type:str]
+ansible_user: ENC[AES256_GCM,data:TtlJoW7P,iv:btdYIbCkwedUDvWMlPNb0nHsLCtTliPZp7Zcg0j7YAk=,tag:qM03/Bkn5BRZbNlPpx53aQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkR2tTTWd3R050OHVXck82
-            Y2FvbExvQTJKRm5hbGhZQm9reC9aZkZlZ0FrClRDbVVCRGRoM0ZCbE8zVCs0T3pY
-            eEU2cldjVG5uZ253TE5OZmNDK3VCaFEKLS0tIDgxbWpDb2pDeHFVYWNEdWlIY1h5
-            U1lJZk5mcHlaTkhadGdpQkFqN0Z4YWsKk0L5NkAuFBAWG0S9/C7EQdauLpQnlCB1
-            3KyKsTvlW8kruMZjt82l7FgyG18CtIC7NN2bQC17ygq2lOUL8p7NXw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBhS1NCWWkwK3E3d1Z3ZlMw
+            OHh3VEVpYy9KT05BcXBaT3JkcjhEUXg2UzFvClA2QVFwVmVvWUw4V2IrTHVzUlhr
+            a2l3alhwRS9EYTdVQTZzVThHZG5aOUUKLS0tIGRBR1RLN3dGRnNyYUUyZnJpMjNP
+            UWxFbm1MckxkNy9Yc0xvREtHQ3FDUlkKj+c+yWYO6g8YdLVYcgF0DyjXa/kj4yHm
+            ojj2UkhEcgW406EQe5FanZcnIJd5Ez5aRQIU/H9vBzE+1I2gLrP4OA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:dYsaQeVstEVbAkE0EFpFbCnBkFjtLd45zQWDKMrrsJsobor6HPwL1G7tPcfig5aiGY4zNkEYC1ltawxx2rzcKY1zhE+V47VxAvXhX10vKuURa5NthxbSpiiyVqtozRoBPJDshaRiFHbXR0mdGKYzph7istvaW13MWjOFwhWYx3A=,iv:kbNw8Q7beEnIssyQOZGz02xwv5vAlkoDsSBme3fI6Ek=,tag:Hj+d9pekGNC6xEfOZ/hfIw==,type:str]
+    lastmodified: "2023-01-05T23:23:29Z"
+    mac: ENC[AES256_GCM,data:AhrK+z4I533Rn4nxmWR4iXPPrEIWIJj7903VazHiYfDP4r22vj1Tf/Y27E7ool5s1SOvUh9oxZ9cmSFcsoIC5B/ZgpSC8sPEI/Y1H64iP2Yv//mQ1kiV2QS5K74CG4tj7vXjooiF/OWsIRL9j+bp3M0BpoTDx8QrNsqYr0xr7GI=,iv:w4WHCvKJPrTGUX6iL2Hwnvjg8lZi+kYPQUi+ghvuESs=,tag:xBANrlyT5VKWfkY6tlz6tQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
