--- a/ansible/inventory/kube/host_vars/k3s-4.sops.yml
+++ b/ansible/inventory/kube/host_vars/k3s-4.sops.yml
@@ -1,5 +1,5 @@
-kind: ENC[AES256_GCM,data:ANWhxLJS,iv:4w5WarpNqsqZb/1PJjGZhWb8OE+Uz/TePFnX9YR4qxY=,tag:jos5sWvRoKBvJ9RoLCOxMA==,type:str]
-ansible_user: ENC[AES256_GCM,data:DCE/bIKK,iv:EmxY3sLvuqq4Mv8CnnaqKIR8d6DI7Y1L5IeFgdm+QmQ=,tag:HD1KbNFwR4KcddUABEKo+Q==,type:str]
+kind: ENC[AES256_GCM,data:9RYJiJva,iv:/OTO7fe5mROs/1j5VZXHEs7KamrtVfaXQI4fBWKCpkw=,tag:9q2DSSojeyueftn+aTEgJg==,type:str]
+ansible_user: ENC[AES256_GCM,data:g5Blb+Z8,iv:rajBdU+05yv45pb3xe46F8N7X2JRkA2cWO6qbcGiNe4=,tag:WqBxG1kXrwfaAjvKfvmOJQ==,type:str]
 ansible_become_pass: null
 sops:
     kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1b0ZNVHpXSm5NMUVLY2gz
-            ZHBZbTJ6K1lqZDdkeUEySVRtRzVnMHYzcVVFCmF5RlJ5bkNyMUlZVytHOXVlL2Yx
-            ejhJL1NZMXN2dnYxRUNsMDMwQjJBU2sKLS0tIEhMY3BVbWxubWl1UUZpcXhtQWRS
-            VUk2OUw3RnE0WThvVUZQNDRJbFZXVTgKoMvGIhLA14Ms7WI4n7Is4dVjSpJwNMoY
-            BPC1wLfC+KDU88rKFVOjxQHSjSWlNYqS+qES/lEJUU7RlRHNL+nGIA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLSHdhUmsrb2tZYklsZ2JZ
+            UnB2c0RaSlhyMFc0anZFVGxXMm1FaEFFRldJCjZ5aE5VMDNhbDdIZUc3OUtxRkRN
+            MlBoS0xyWXQ1ZGw2VGJpN09yRXlBYW8KLS0tICtUbDdGSTRkdmVpbUxqamx5aGVI
+            cmxFL3ZWZkoxbU9TVFRBLy90UDNyUW8KnBGl1rreZSy6abyKLL4BnvsfBwuTTJ+/
+            e2EDXhExFTI9gGyRTgyhJ4Cd1At752Ta4m1VI0NhmCP+3RBgzHjS0w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:zSjudBCHK5c4/9XqSPi92isU1hL6iSRUeiXFiugZdRYR81gWLwsf9Zp6NvANrUCW3AJc87E/kQpNidZXpLMEiWFBx6JVQLVo/kJWmah1A5gXBz1qDWflOax5pw7ssTGxSBVZB25AA4o1UbTb15LeLB0uwoHHrVVo4fpho82Zdv8=,iv:PpqBYI4vBfF+bsC32u5TdGXPLLo+DcYm3lXNZLERORo=,tag:Fgk0+XkQUAfoyfZ01tekxg==,type:str]
+    lastmodified: "2023-01-05T23:23:29Z"
+    mac: ENC[AES256_GCM,data:TeOfUKj2xde2294i8PZ4vOhRIV3qrajwND6uleiOGk7XDL+CilZQdkCd2qgCvOtxhrbUK41FHPnY6gyeewfdjYv06u0hFE4D/k574fgoCcWR2HUra9K4LF750qeg1OBQvVcUX0XI537KOijj2qlxw5yllfkhc8j/DY+Dw5Ilc9w=,iv:GzcrwrpyAsS9zFqsQAklV8hUUT5Vo/gAzMM5izy7SZA=,tag:NdC/TMjrTbJe8dKEXNYqeQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
