--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,14 +4,15 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:wmn8JJ14KdDMkY8=,iv:1zuvzPsbtIO/XJ7LLTkzo3JfR8rmnbrYEEbhhJZb9l8=,tag:6pypPHE+l2TOGjhF4/gHww==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:oSD1BflXw09CUo2fo56qSIR6Tht0,iv:P97jmdz2MAR8tDcW1YSD3GsR6b57yybBY8mV1920iRo=,tag:UYS6HqhPGt0bL0DK3LZHAQ==,type:str]
-    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:biHx2jgu0LnOQBriK/n/mxF6eMY0Up+a9ckmxV7tYIhlE0Ll5DOSzdHjA/Xe7Xn95obXjjHmNDenA6j0lnZVUWyHDVBe8wo=,iv:RvEqIVEzPuBXpaibdmQvUawo0Ue553aUTHeXvPyrUbk=,tag:Ltfe34p+BmP8GaEWFFRG3Q==,type:str]
-    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:zkv8KOHahiRrGCNZeVbE4TVLgUewYhB42lvW8kw8BOtY970=,iv:kes/jKA2S5cEkPJFMCcZAfQkHHnicFv8YrdDXGNft9k=,tag:DwkIIhyyKz8JFfkmQMnnDA==,type:str]
-    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:97EK+Zoi8o/jxbTFUERFleXUGw==,iv:jl8LyOOweqtFL4qZqEthtbgQqHjZsLSpXF0KMUQalmU=,tag:+hHxpzdJbcExuki8SdaLPg==,type:str]
-    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:nx2BY84xDn4/qDyacpYEo4+ljZ+P,iv:3ADHJRmDS24zEFhyF+YjiC6K10n348o7j+qMZqKDe5g=,tag:bOXuaD/F1JA89UeJxEBMGg==,type:str]
-    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:15dFHSo7KY4=,iv:WmCuAliMluS7Z88h8SAmvY/s3iJ+H4ZYuQNWnow8Fpc=,tag:AhgVMK6mistAPXf2chbq6g==,type:str]
-    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:xCBxbHS6IOQ=,iv:CqoPNQLwE70XKgxMGdQEvPrxIF/n5oQEcIiNk9XbMkI=,tag:G7ZyqIOEsBRM0sE3lDR7Yw==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:LJ9N8bau8Z7HHys=,iv:heqU20AQdrUh9XHGRok0tQOfKBnHB9pxXazF+20NseI=,tag:bFcyWmVhczDmTp/nvJhcrQ==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:m/g8xBetwTRp4KQHmxFnoUltusmP,iv:5WIH8FeNReLS5/Ux+pASxO1qH/9pi6QgTlWB4kWWmwU=,tag:FiADX2/7WMdrCO/KQrqnOQ==,type:str]
+    SECRET_GOOGLE_CLIENT_ID: ENC[AES256_GCM,data:ax4p2whUsb6WupkO4FapApUSgPI+EmpgS5nSKik08zbjJd1El6yxCDvis91UyuN0803KfwG07Hgi3y/WAcRk38KKdYWHhSE=,iv:kM+Hw6PTDjCnbj6OhjYqi444VhGK8+Rn5byncNc/pWk=,tag:PbrC0+v+BMMwP1CapsK7gQ==,type:str]
+    SECRET_GOOGLE_CLIENT_SECRET: ENC[AES256_GCM,data:t1IEG/AUOulywyYjgmtEAJ5SngzdHXBevt7NCLP4SLlpE/Q=,iv:ZMkt2myCJeINo+NdP8OZ422GLA4YHwoRRuOY2Fkka3k=,tag:lpTL1A7bGOshEjvEJmiGyQ==,type:str]
+    SECRET_GOOGLE_WHITELIST_EMAIL: ENC[AES256_GCM,data:3pi7/hwMr4khYAS0V3nhJfPenw==,iv:uQX2zunW7D9/2H2dpAkRYo9+VwBHLVEk5LyB7UeTb3I=,tag:mSUZkBxGSa0inpOEu3z/eA==,type:str]
+    SECRET_AUTHELIA_EMAIL: ENC[AES256_GCM,data:Evf7JqcrCy5d5tGkjaT2yodxCVNO,iv:HpvDAxILzTCQSXIkkrTjgsxBJHHDtolj5MlJam5L6+Q=,tag:hhNqDeU5Q5UDMxpkRRb12w==,type:str]
+    SECRET_AUTHELIA_DISPLAY_NAME: ENC[AES256_GCM,data:spo/vCJ0PSs=,iv:zWx2vl1FNSBD06Tx7fVNG7dpsLvC8+dnhyxoIvKvmIc=,tag:L+trhNlrJGS7yQvajQSsJg==,type:str]
+    SECRET_AUTHELIA_PASSWORD: ENC[AES256_GCM,data:a7/GpdrnEoI=,iv:xCHTC1Mw51yhiUhPaqzQ51qHqEO1w9iR8V2CLDD3njM=,tag:ul7yr9i7/VWMk7/BXVBK7Q==,type:str]
+    SECRET_AUTHELIA_JWT: ENC[AES256_GCM,data:hhn+DdcnrgQJsnRGz5fXqAdCAS2lPduOdGy91WBnQtDjMNKX2En8zacSw0cPlb44TM1JZIxVWcKjb0JBNvYRwg==,iv:KlNksI10qdPbcLRDkrVwgiTm30NzAN8Ooqwod1TRRcs=,tag:j5d+CR9huiks0A6dpz6ZSg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -21,14 +22,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBxS0xUTEU2R3ZIMUZaQmRW
-            Smtld2YzOCtwQUJCSUxXUkRTSzZiNE1pMmpJClpRUmVTUTdZN0ZlM0Z6MzFSdVpr
-            ZGZqZWZScFhkUlNtT1d3Y284YVp3Rk0KLS0tIFZUT3FQSWxrM1J3dXRMU2VtaXZC
-            Nkt0RWxqb2hLT2tJa1JaQTNXUll4WlkKJSidTAIeFsBrEh7iK6U5Q7TpyVA1ZKFG
-            LIr8zu7jielGa2f2qedcQtkc4sfmQb3ex3RAZ95qw+76cKhc9kYXVQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5cDVyWDNLUkFlOHhPY3NT
+            MEtpclUvYmx5RU9VYnhrLzFwRTdSWTdzazJFClJlU1pKQk02OUpLNVFJTWxOeUxu
+            SFdrVkdHSXo2VXAvRFZ4T0F0Q2tpeXcKLS0tIG5YR3U5QzVoRFNEZlBOQUlPZ1Ja
+            a2I2QllnU1YrQUtiTkNLbnlTc0hFMlEKilmUI9v4JGdBczezU7/FB7gESbxDetKZ
+            YAvFBDgkrXJ+jrNcQGlzAeHvLNszEbi06upx1hCjYbvk2DZPeWP6sg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:6zn65trOg5Sg9tBMu5Coz1FS9OU6a7db1Xrlhw8nqIqzYZxRDTWzN+1MwpeFO4JDFbH5orzsKqzSNBzPxu4vXm+vcnCt/avl2Jfgl7x90pvCzU4FA4xQvQ25Hqo5/wnE/9lvorxe6x4pvC1nIZRbVr2rwwXJBEX/jT4dy8gTM7M=,iv:U68ap1Rt1kvBe8Zxva7sixZdK7wuObRtlJF+fZmefQw=,tag:jyRvDYkeXJm2QzuhsQPjPw==,type:str]
+    lastmodified: "2023-01-05T23:23:28Z"
+    mac: ENC[AES256_GCM,data:93KupI3R8k1UxD6xy8eVBYHkN6lu72I1XLbW6wXPFXJwjqDSmosLnwkBU/Iex3FowGGV0tPubgVZGydLQ/dZl0IvilMFMPg1BQfmZC4pe5c+3Mld41b0qrU5jQmMcrbWD6VqU0tNyf/i2teQb31vR0Fx5mV7PPv7B2XemkU7Mf4=,iv:BiaF+xJaHtE4Q81XBrz5xaDpT0gyA6MEUKc5xtV/Yvg=,tag:UP4SPzIzy34CJ7fe8EXD+w==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
