--- a/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
+++ b/kubernetes/apps/networking/cloudflare-ddns/app/secret.sops.yaml
@@ -5,9 +5,9 @@ metadata:
     namespace: networking
 type: Opaque
 stringData:
-    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:tkgJj0cQIG1TE8lMsTl2hymxvT3w,iv:D3TvRHEfHbXIl9hus473Z08CxhPtehDNBGKOsvQ/Xqg=,tag:yhZxwtKrZKL9+k375OhC2Q==,type:str]
-    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:SGdwdfZqfoLEE1OAUHAp1WLNezewk0A8GcYyv0Pl9XfCJMQhzQ==,iv:bsJZji9E6JPbxU3jkuM2cpbdzcL/QwoHZ1sfDP+GyT4=,tag:vLUoMqEO0s/0Y5NHsGGGvg==,type:str]
-    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:elcrrpB03Vcwz7E=,iv:gFtdAgSNYCILVplULG57GOKQ1uJ1KNV5AIPBsdyXVfE=,tag:6xLTOravI/L3T2TSodpDFQ==,type:str]
+    CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Y1tlMG6KtZL+cmrp0JXphHoujYbe,iv:T4IHSbZtOJryuoBjcT+tzN9MIWGwE8MRxTUO50nHdgQ=,tag:lI0S8JOvxVFoOK8IWqccVw==,type:str]
+    CLOUDFLARE_APIKEY: ENC[AES256_GCM,data:sY1yAatME2wc8mTEqh0zxrhZdE1uYiBHEcQNYQU5iQ9aM1RfWg==,iv:AJsOG40M1sSUUKd9PyP2TjW9HuNIA8VLoYczsp1CgZo=,tag:xzlSXm4Ve9EjLiR+SyQwJg==,type:str]
+    CLOUDFLARE_RECORD_NAME: ENC[AES256_GCM,data:kDJY3EAAataT0BY=,iv:k91AGfv7mo7fWwA3+XUiKhj+0C4gXqJwGNwLEREyxVM=,tag:6b6NKoEpj634EXMl+lfIHA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -17,14 +17,14 @@ sops:
         - recipient: age13q8sfmjsr5nhc6mr5a95wdayu6v9nq3007e0kuft7edvcy6zjdgsj26eln
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA1MVVlY0pmQ1hNd0FBWTFG
-            ZFczdDdsc0xiYWQzU3BjMWhMNDhKMDROaEdjCncwWWFteHEvVThFTmlISUNtRHll
-            MEdzam4ra3RQbXpZY0IwQVg4cUNWMGsKLS0tIHBhNUdnenFjTVk4UHlRaFl5MzhG
-            MkNjQ3JSeFN2NEF1Ym1lSEhpYmJBLzgK5o000n6EOdCkb1fVPiNxrOqMXtgoiA3A
-            G3SyFIH0Fms/oUWqXm5UcdA745owj4e/AO7Ip5qUTALeNnMIBS+IIQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBweVlNRFFWa2wwdlF6RGVk
+            dnY5ckVKQVNCK2NQWkt5ZGJZTUFYS2ZxbW5FCldWZlo5VzFhMngrMUJkcGhnNmZK
+            Z203R2EzRGhlbTNOTExOdjcwdCtGRmMKLS0tIGlIV1huMllhTDAyWWFPSXI0Tk53
+            cHMydXhIYXNRcGxoRTdKN3lWem84T28K/nkRXDGWV74XdLnX2oAOx+k3+AbMCz1l
+            PcZHk59EWP1gR3zqQPHAZGJY9vB8x08Y7IVEpDr/9KvbU26AbNTLrg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T17:59:30Z"
-    mac: ENC[AES256_GCM,data:bd809eO9kijAl6szTkEhXIGMq/8R9o+pdglTdyBTGvluPzsHwtEUqb307RcSF7cWtB3xx+qiQxOB2ubvejNx9HiHKBBpJwHAqv5eL5ezioPDNUNDCF7SkPuM+XzIJL9SYng3wcj+oorFar5PM5Xh32R3yvvLvTDuf+hHfgszxhc=,iv:2ShceFW47++R/ZnOxfQJyhx4hUzqagPwXbsGbL9Qc1k=,tag:jSmisJAYp3d4V97N/YCQMg==,type:str]
+    lastmodified: "2023-01-05T23:23:28Z"
+    mac: ENC[AES256_GCM,data:DpZxScceYhES+1jchYYp7T4tG8S6IyOhEnuegfQqaNWIw/TBYLGmdfORvpwroAmwNjfTwWWF5y7mBBgy1y+lP/dU7IquzCmsT1LP09OCPAR4cYjlYUzf+Bx1g8nedvnxbVYE5AiJvT8uV6ebUMd/aqXywvKo6nFfjCaHEYGWqW8=,iv:4JJT9HgfZXv103I7Dz1KLLMau66Knqe31sRYsyikM4s=,tag:CgbqcNn8eIzVcz/E8alAVg==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
