--- a/kubernetes/apps/networking/authelia/app/kustomization.yaml
+++ b/kubernetes/apps/networking/authelia/app/kustomization.yaml
@@ -3,7 +3,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: networking
 resources:
-  - authelia-auth.yaml
+  - certificateh.yaml
+  - ingress-route.yaml
   - helm-release.yaml
 # configMapGenerator:
 #   - name: authelia
