--- a/kubernetes/apps/networking/authelia/app/certificate.yaml
+++ b/kubernetes/apps/networking/authelia/app/certificate.yaml
@@ -1,12 +1,12 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: auth.${DOMAIN}
+  name: auth.${SECRET_DOMAIN}
   namespace: authelia
 spec:
-  secretName: auth.${DOMAIN}
+  secretName: auth.${SECRET_DOMAIN}
   dnsNames:
-    - auth.${DOMAIN}
+    - auth.${SECRET_DOMAIN}
   issuerRef:
     kind: ClusterIssuer
     name: lets-encrypt-production
