--- a/kubernetes/apps/networking/authelia/app/ingress-route.yaml
+++ b/kubernetes/apps/networking/authelia/app/ingress-route.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: networking
 spec:
   entryPoints:
-    - https
+    - websecure
   routes:
     - kind: Rule
       match: Host(`auth.${SECRET_DOMAIN}`)
