--- a/kubernetes/apps/networking/authelia/app/config/middleware/headers.yaml
+++ b/kubernetes/apps/networking/authelia/app/config/middleware/headers.yaml
@@ -1,17 +1,30 @@
+# ---
+# apiVersion: traefik.containo.us/v1alpha1
+# kind: Middleware
+# metadata:
+#   name: networking-authelia
+#   namespace: networking
+#   labels:
+#     app.kubernetes.io/instance: authelia
+#     app.kubernetes.io/name: authelia
+# spec:
+#   forwardAuth:
+#     address: http://authelia.networking.svc.cluster.local:9091/api/verify?rd=https%3A%2F%2Fauth.${SECRET_DOMAIN_NAME}%2F
+#     authResponseHeaders:
+#       - Remote-User
+#       - Remote-Name
+#       - Remote-Email
+#       - Remote-Groups
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: networking-authelia
-  namespace: networking
-  labels:
-    app.kubernetes.io/instance: authelia
-    app.kubernetes.io/name: authelia
+  name: headers
+  namespace: authelia
 spec:
-  forwardAuth:
-    address: http://authelia.networking.svc.cluster.local:9091/api/verify?rd=https%3A%2F%2Fauth.${SECRET_DOMAIN_NAME}%2F
-    authResponseHeaders:
-      - Remote-User
-      - Remote-Name
-      - Remote-Email
-      - Remote-Groups
+  headers:
+    browserXssFilter: true
+    customFrameOptionsValue: SAMEORIGIN
+    customResponseHeaders:
+      Cache-Control: no-store
+      Pragma: no-cache
