--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -2,98 +2,199 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: &app authelia
+  name: authelia
   namespace: networking
 spec:
-  interval: 15m
   chart:
     spec:
-      chart: app-template
-      version: 1.2.1
+      chart: authelia
+      reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: bjw-s
+        name: authelia
         namespace: flux-system
-  maxHistory: 3
   install:
-    remediation:
-      retries: 5
-  upgrade:
-    remediation:
-      retries: 5
+    createNamespace: true
   values:
-    controller:
-      replicas: 1
-      annotations:
-        configmap.reloader.stakater.com/reload: *app
-        # secret.reloader.stakater.com/reload: "*app,authelia-files"
     image:
-      repository: ghcr.io/authelia/authelia
-      tag: 4.37.5
-    enableServiceLinks: false
-    service:
-      main:
-        ports:
-          http:
-            port: 9091
-          metrics:
+      registry: ghcr.io
+      repository: authelia/authelia
+      tag: '4.37'
+    domain: ${SECRET_DOMAIN}
+    pod:
+      kind: Deployment
+      env:
+        - name: TZ
+          value: ${TIMEZONE}
+      extraVolumeMounts:
+        - name: users
+          mountPath: /users.yaml
+          subPath: users.yaml
+          readOnly: true
+      extraVolumes:
+        - name: users
+          configMap:
+            name: authelia-users
+            items:
+              - key: users.yaml
+                path: users.yaml
+    configMap:
+      log:
+        level: info
+      telemetry:
+        metrics:
+          enabled: true
+          serviceMonitor:
             enabled: true
-            port: 9959
-        # monitor:
-        #   enabled: true
-        #   endpoints:
-        #     - port: metrics
-        #       scheme: http
-        #       path: /metrics
-        #       interval: 1m
-        #       scrapeTimeout: 10s
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: "traefik"
-        annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
-          #traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-cloudflare-only@kubernetescrd"
-          external-dns/is-public: "true"
-        hosts:
-          - host: "auth.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
-    # podSecurityContext:
-    #   runAsUser: 568
-    #   runAsGroup: 568
-    #   fsGroup: 568
-    #   fsGroupChangePolicy: "OnRootMismatch"
+      default_redirection_url: https://auth.${SECRET_DOMAIN}
+      theme: dark
+      webauthn:
+        display_name: auth-external@infrastructure
+      authentication_backend:
+        password_reset:
+          disable: true
+        ldap:
+          enabled: false
+        file:
+          enabled: true
+          path: /users.yaml
+          search:
+            email: true
+          password:
+            algorithm: argon2
+
+      access_control:
+        default_policy: deny
+        rules:
+          # Rules applied to everyone
+          - domain: auth.${SECRET_DOMAIN}
+            policy: bypass
+          - domain: "*.${SECRET_DOMAIN}"
+            policy: one_factor
+          - domain: "${SECRET_DOMAIN}"
+            policy: one_factor
+      session:
+        name: authelia_session
+        # This secret can also be set using the env variables AUTHELIA_SESSION_SECRET_FILE
+        # Used a different secret, but the same site as jwt_secret above.
+        # secret: SECRET_GOES_HERE # use docker secret file instead AUTHELIA_SESSION_SECRET_FILE
+        expiration: 3600 # 1 hour
+        inactivity: 300 # 5 minutes
+        domain: ${SECRET_DOMAIN} # Should match whatever your root protected domain is
+      storage:
+        local:
+          enabled: true
+          path: /config/db.sqlite3
+        postgres:
+          enabled: false
+
+      notifier:
+        filesystem:
+          filename: /config/notifications.txt
+    secret:
+      jwt:
+        value: ${SECRET_AUTHELIA_JWT}
+
     persistence:
-      config:
-        enabled: true
-        type: configMap
-        name: *app
-        subPath: configuration.yaml
-        mountPath: /config/configuration.yml
-        readOnly: false
-      notifications:
-        enabled: true
-        type: configMap
-        name: *app
-        subPath: notifications.txt
-        mountPath: /config/notifications.txt
-        readOnly: false
-    # persistence:
-    #   config:
-    #     enabled: true
-    #     type: custom
-    #     mountPath: /config
-    #     readOnly: true
-    #     volumeSpec:
-    #       configMap:
-    #         name: authelia-config
-      # users:
-      #   enabled: true
-      #   type: secret
-      #   name: authelia-files
-      #   subPath: users.yaml
-      #   mountPath: /config/users.yaml
-      #   readOnly: false
+      enabled: true
+      storageClass: local-path
+  interval: 10m0s
+# ---
+# apiVersion: helm.toolkit.fluxcd.io/v2beta1
+# kind: HelmRelease
+# metadata:
+#   name: &app authelia
+#   namespace: networking
+# spec:
+#   interval: 15m
+#   chart:
+#     spec:
+#       chart: app-template
+#       version: 1.2.1
+#       sourceRef:
+#         kind: HelmRepository
+#         name: bjw-s
+#         namespace: flux-system
+#   maxHistory: 3
+#   install:
+#     remediation:
+#       retries: 5
+#   upgrade:
+#     remediation:
+#       retries: 5
+#   values:
+#     controller:
+#       replicas: 1
+#       annotations:
+#         configmap.reloader.stakater.com/reload: *app
+#         # secret.reloader.stakater.com/reload: "*app,authelia-files"
+#     image:
+#       repository: ghcr.io/authelia/authelia
+#       tag: 4.37.5
+#     enableServiceLinks: false
+#     service:
+#       main:
+#         ports:
+#           http:
+#             port: 9091
+#           metrics:
+#             enabled: true
+#             port: 9959
+#         # monitor:
+#         #   enabled: true
+#         #   endpoints:
+#         #     - port: metrics
+#         #       scheme: http
+#         #       path: /metrics
+#         #       interval: 1m
+#         #       scrapeTimeout: 10s
+#     ingress:
+#       main:
+#         enabled: true
+#         ingressClassName: "traefik"
+#         annotations:
+#           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+#           external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
+#           #traefik.ingress.kubernetes.io/router.middlewares: "traefik-system-cloudflare-only@kubernetescrd"
+#           external-dns/is-public: "true"
+#         hosts:
+#           - host: "auth.${SECRET_DOMAIN}"
+#             paths:
+#               - path: /
+#                 pathType: Prefix
+#     # podSecurityContext:
+#     #   runAsUser: 568
+#     #   runAsGroup: 568
+#     #   fsGroup: 568
+#     #   fsGroupChangePolicy: "OnRootMismatch"
+#     persistence:
+#       config:
+#         enabled: true
+#         type: configMap
+#         name: *app
+#         subPath: configuration.yaml
+#         mountPath: /config/configuration.yml
+#         readOnly: false
+#       notifications:
+#         enabled: true
+#         type: configMap
+#         name: *app
+#         subPath: notifications.txt
+#         mountPath: /config/notifications.txt
+#         readOnly: false
+#     # persistence:
+#     #   config:
+#     #     enabled: true
+#     #     type: custom
+#     #     mountPath: /config
+#     #     readOnly: true
+#     #     volumeSpec:
+#     #       configMap:
+#     #         name: authelia-config
+#       # users:
+#       #   enabled: true
+#       #   type: secret
+#       #   name: authelia-files
+#       #   subPath: users.yaml
+#       #   mountPath: /config/users.yaml
+#       #   readOnly: false
