--- a/kubernetes/apps/networking/authelia/app/helm-release.yaml
+++ b/kubernetes/apps/networking/authelia/app/helm-release.yaml
@@ -59,7 +59,7 @@ spec:
           enabled: false
         file:
           enabled: true
-          path: /users.yaml
+          path: /config/users.yaml
           search:
             email: true
           password:
