--- a/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/deployment.yaml
+++ b/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/deployment.yaml
@@ -33,7 +33,7 @@ spec:
               value: "false"
       serviceAccountName: nfs-provisioner
       volumes:
-        - name: nfs-provisioner-root
+        - name: nfs-subdir-external-provisioner-root
           nfs:
             server: "${NFS_SERVER_ADDR}"
             path: "${NFS_SERVER_PATH}"
