--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -14,7 +14,7 @@ resources:
   - ./metrics-server.yaml
   - ./stakater.yaml
   - ./weave-gitops.yaml
-  - ./nfs.yaml
+  - ./nfs-subdir-external-provisioner.yaml
   - ./grafana.yaml
   - ./traefik.yaml
   - ./k8s-at-home.yaml
