--- a/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/kustomization.yaml
+++ b/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/kustomization.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - deployment.yaml
-  - rbac.yaml
-  - storageclass.yaml
+  #- deployment.yaml
+  #- rbac.yaml
+  #- storageclass.yaml
   - helm-release.yaml
