--- a/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/helm-release.yaml
+++ b/kubernetes/apps/kube-system/nfs-subdir-external-provisioner/app/helm-release.yaml
@@ -42,7 +42,7 @@ metadata:
     app.kubernetes.io/name: nfs-provisioner
     kustomize.toolkit.fluxcd.io/substitute: disabled
 provisioner: nfs-provisioner
-reclaimPolicy: retain
+reclaimPolicy: Retain
 parameters:
   pathPattern: "${.PVC.namespace}/${.PVC.annotations.nfs.io/storage-path}"
 mountOptions:
