--- a/kubernetes/apps/networking/authelia/app/pvc.yaml
+++ b/kubernetes/apps/networking/authelia/app/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: authelia
+  name: authelia-config
   namespace: networking
   annotations:
     nfs.io/storage-path: "authelia"
